# cfd-cuda-windows

./: .gitignore  CMakeLists.txt  README.md
include/: cfd_solver.h  cuda_wrapper.h
src/: main.cpp
src/cpu/: cfd_solver.cpp
src/cuda/: cuda_wrapper.cu
